# crowd_vision

./: .gitignore  BETA_HANDOFF.md  CLAUDE.md  LICENSE  README.md  TEAM_START.md  THIRD_PARTY_LICENSES.md  __init__.py  implementation.md  mosquitto.conf  plan.md  pyproject.toml  roles.md
_lib/: __init__.py  config.py  framebus.py  messages.py  mqttc.py
bench/: __init__.py  _util.py  cloud_rtt_bench.py  e2e_bench.py  embed.py  net_bench.py
config/: .env.example  cameras.yaml  devices.yaml  playbooks.yaml  zones.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO.md  DEVICES.md  LIVE_CAMERAS.md  MESSAGES.md  verify_npu.out
field-app/: README_FIELD_APP.md  settings.gradle.kts
field-app/app/: build.gradle.kts
field-app/app/src/llm/java/com/crowdvision/field/llm/: FunctionGemmaStructurer.kt  LlmEngine.kt
field-app/app/src/main/: AndroidManifest.xml
field-app/app/src/main/java/com/crowdvision/field/: AppState.kt  Bench.kt  Envelope.kt  FieldService.kt  MainActivity.kt  Mqtt.kt  OfficerLogic.kt  Structurer.kt
field-app/app/src/main/res/layout/: activity_main.xml
field-app/app/src/main/res/values/: strings.xml  themes.xml
field-app/app/src/test/java/com/crowdvision/field/: ContractTest.kt  MqttLiveTest.kt
gate-node/: app.yaml
gate-node/python/: main.py  requirements.txt
gate-node/sketch/: sketch.ino  sketch.yaml
sim/: __init__.py  __main__.py  broker.py  replay.py  sim_feeds.py  sim_gate.py  sim_officer.py
sim/tests/: conftest.py  test_sim_loop.py
tools/: calibrate.py  check_field_contract.py  fake_ipcam.py  find_cameras.py  live_capture.py  make_calibset.py  run_live_wsl.sh  webcam_ipcam.py
venue-tier/: aisuite_client.py  sarvam_adapter.py  sim_zones.py  template_fallback.py
venue-tier/prompts/: advisory_templates.yaml
zone-brain/: README_ALPHA.md
zone-brain/bench/: detect_bench.py  e2e_bench.py  mesh_bench.py  power_delta.ps1
zone-brain/engine/: flow.py  playbooks.py  risk.py
zone-brain/llm/: genie_shiftbuddy.py
zone-brain/scripts/: download_models.py  export_yolo_wsl.sh  npu_smoke.py  quantize_yolo_int8.py  run_demo.ps1  setup.ps1  verify_npu.py
zone-brain/server/: README_SERVER.md  app.py  mqtt_bridge.py
zone-brain/server/static/: app.js  index.html  style.css
zone-brain/vision/: capture.py  density.py  detect_qnn.py  gatelines.py  homography.py  pipeline.py  scheduler.py  tracker.py
