[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdvision"
version = "0.9.0"
description = "CrowdVision — autonomous crowd-crush prevention on the Snapdragon edge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CrowdVision Team" }]

# Approved dependency set (Gamma lane = pure-Python only; Windows ARM64 safe).
# Do not add dependencies beyond this set without team sign-off.
#
# opencv-python is NOT here on purpose: it publishes no win-arm64 wheel, so on
# the X Elite (our own target host!) pip falls back to an sdist build, which
# needs MSVC + a from-source numpy and fails. That broke the judges' first
# command. cv2 is only ever needed by the camera/vision path, and every module
# that uses it imports it lazily — so it lives in the [vision] extra instead.
dependencies = [
    "paho-mqtt>=2.0",
    "amqtt>=0.11",          # pure-Python broker (sim/dev + fallback); mosquitto is the venue broker
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Camera capture + calibration + the QNN detector's pre/post-processing.
# Needed only for the REAL camera path; the sim and dashboard run without it.
# No win-arm64 wheel exists — on the X Elite, install cv2 from the staged
# wheelhouse (zone-brain/scripts/setup.ps1) rather than from the index.
vision = ["opencv-python>=4.9"]
# Real CPU person detection for the live-camera bridge (tools/live_capture.py).
# Optional: without it, live capture falls back to a motion-occupancy proxy.
# This is the plan's detector (Ultralytics YOLOv8, AGPL-3.0 — see THIRD_PARTY).
live = ["ultralytics>=8.2"]

# --- Packaging: keep the v9 §i top-level layout literal. -------------------
# The repo root IS the `crowdvision` package (package-dir maps it to ".").
# That makes `sim/` importable as `crowdvision.sim`, so the judges' pinned
# command `python -m crowdvision.sim --all` resolves after `pip install -e .`.
# Hyphenated dirs (zone-brain/, venue-tier/, gate-node/, field-app/) are NOT
# Python submodules — they are run as scripts and import shared code from the
# installed `crowdvision._lib`.
[tool.setuptools]
package-dir = { "crowdvision" = "." }
packages = [
    "crowdvision",
    "crowdvision._lib",
    "crowdvision.sim",
    "crowdvision.sim.tests",
]
# Explicit list disables setuptools flat-layout auto-discovery of sibling dirs.

[tool.pytest.ini_options]
testpaths = ["sim/tests"]
addopts = "-q"
